objects/lightsideapps__Lightside_Apps__c.object
<CustomObject>
    <fields>
        <fullName>lightsideapps__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lightside Apps Account field used for Programmatic Reference</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lightside Apps</relationshipLabel>
        <relationshipName>Lightside_Apps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lightside Apps Contact field used for Programmatic Reference</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Lightside Apps</relationshipLabel>
        <relationshipName>Lightside_Apps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Email__c</fullName>
        <description>Lightside Apps Email field used for Programmatic Reference</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>lightsideapps__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lightside Apps User field used for Programmatic Reference</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lightside_Apps</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Lightside Apps</label>
    <nameField>
        <label>Lightside App Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lightside Apps</pluralLabel>
    <recordTypes>
        <fullName>lightsideapps__Approval_Automation_Credential</fullName>
        <active>true</active>
        <description>Stores the Credentials required for the Approval Automation</description>
        <label>Approval Automation Credential</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>